--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,47 @@
 #include "stdafx.h"
+#include &lt;cv.h&gt;
+#include &lt;highgui.h&gt;
 int main()
 {
     return 0;
+CvCapture* capture = 0;
+    capture = cvCaptureFromCAM(0);
+
+ if(!capture)
+    {
+        printf("Could not initialize capturing...\n");
+        return -1;
+    }
+ 
+    cvNamedWindow("video");
+
+ while(true)
+    {
+
+
+ IplImage* frame = 0;
+
+ frame = cvQueryFrame(capture);
+ 
+        if(!frame)
+            break;
+
+ cvShowImage("video", frame);
+  int c = cvWaitKey(20);
+
+   if((char)c==27 )
+            break;
+    }
+
+ cvReleaseCapture(&amp;capture);
+    return 0;
 }
+if(!frame)
+    break;
+ 
+cvErode(frame, frame, 0, 2); // ADD this line
+cvShowImage("video", frame);
+}
+#include &lt;cv.h&gt;
+#include &lt;highgui.h&gt;
+
